chore(package): update dev script to filter-out docs
Updated the dev script to exclude the @unbook/docs package during development. This improves build performance and focuses on relevant packages.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "pnpm": ">=10.0.0"
   },
   "scripts": {
-    "dev": "turbo watch dev",
+    "dev": "turbo run dev --filter='!@unbook/docs'",
     "build": "turbo run build",
     "start": "turbo run start",
     "lint": "turbo run lint",
